Fix: footer too big

--- a/assets/css/site.scss
+++ b/assets/css/site.scss
@@ -463,7 +463,7 @@ footer{
 	background: #28222E;
 	color: #F0F2FF;
 	letter-spacing: 0.5px;
-	padding: 80px 0;
+	padding: 80px 0 0;
 	font-size: 13px;
 	a{
 		color:#C2C4CF;
